@@ -1,5 +1,6 @@
-//*CID://+vam0R~: update#= 612;                                    //~vam0R~
+//*CID://+vat1R~: update#= 613;                                    //+vat1R~
 //**********************************************************************//~v101I~
+//2022/10/16 vat1 deprecated; Java9 new Integer-->valueOf          //+vat1I~
 //2022/03/24 vam0 show Wareme sign                                 //~vam0I~
 //2021/09/24 vaed more adjust for small device(dip=width/dip2px<=320)//~vaedI~
 //2021/01/07 va60 CalcShanten (smart Robot)                        //~va60I~
@@ -119,7 +120,8 @@ public class DiceBox extends Thread                                //~v@@@R~
 //  public static DiceBox diceBox;                                         //~v@@@I~//~v@21R~
 //  private static boolean isAlive;                                //~v@@@I~//~v@21R~
 //  private boolean isAlive;                                       //~v@21I~//~v@11R~
-    private Boolean isAlive=new Boolean(false);	//object as lockword//~v@11R~
+//  private Boolean isAlive=new Boolean(false);	//object as lockword//~v@11R~//+vat1R~
+    private Boolean isAlive=Boolean.valueOf(false);	//object as lockword//+vat1I~
                                                                    //~v@@@I~
     private  GCanvas gcanvas;                                      //~v@@@I~
     private Pieces pieces;//~v@@@I~
@@ -911,8 +913,8 @@ public class DiceBox extends Thread                                //~v@@@R~
         }                                                          //~v@@@R~
     }//class Casting                                               //~v@@@I~
     //***********************************                          //~v@@@I~
-//  public void doEnable(boolean Penable)                          //~v@@@R~//+vam0R~
-    private void doEnable(boolean Penable)                         //+vam0I~
+//  public void doEnable(boolean Penable)                          //~v@@@R~//~vam0R~
+    private void doEnable(boolean Penable)                         //~vam0I~
     {                                                              //~v@@@I~
     	swEnable=Penable;                                          //~v@@@I~
         if (Dump.Y) Dump.println("DiceBox.doEnable enable="+Penable);//~v@11I~
